--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,10 +2,10 @@ stages:
   - build
   - test
   - deploy
-  
+
 build-wedding:
   only:
   - master
   stage: build
   script:
-  mvn clean package
+  - mvn clean package
