--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -9,4 +9,6 @@ build-wedding:
   stage: build
   script:
   - echo $MAVEN_HOME
+  - cd $MAVEN_HOME/bin
+  - ll
   - $MAVEN_HOME/bin/mvn clean package
