--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,2 +1,12 @@
 server:
   port: 9091
+spring:
+  datasource:
+    username: liji
+    password: Syx002183
+    url: jdbc:mysql://47.75.114.178/ycycqwedding?characterEncoding=utf-8&useSSL=false
+    driver-class-name: com.mysql.jdbc.Driver
+  jpa:
+    show-sql: true
+
+
