--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -11,4 +11,5 @@ build-wedding:
   - pwd
   - $MAVEN_HOME/bin/mvn clean package
   - docker build -t ycycqwedding .
+  - docker stop ycycqwedding
   - docker run -p 2222:2222 -itd --restart=always ycycqwedding
