--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -12,4 +12,4 @@ build-wedding:
   - $MAVEN_HOME/bin/mvn clean package
   - docker build -t ycycqwedding .
   - docker stop ycycqwedding
-  - docker run -p 2222:2222 -itd --restart=always ycycqwedding
+  - docker run --rm -p 2222:2222 -itd --restart=always ycycqwedding
