--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -11,4 +11,4 @@ build-wedding:
   - pwd
   - $MAVEN_HOME/bin/mvn clean package
   - docker build -t ycycqwedding .
-  - docker run --rm -p 2222:2222 -itd --restart=always ycycqwedding
+  - docker run --rm -p 2222:2222 -itd ycycqwedding
