--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -11,4 +11,5 @@ build-wedding:
   - pwd
   - $MAVEN_HOME/bin/mvn clean package
   - docker build -t ycycqwedding .
+  - docker rmi $(docker images -f "dangling=true" -q)
   - docker run --rm -p 2222:2222 -itd ycycqwedding
