将gitlab-ci命令改为bash执行，避免报错终止ci/cd

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -8,8 +8,4 @@ build-wedding:
   - master
   stage: build
   script:
-  - pwd
-  - $MAVEN_HOME/bin/mvn clean package
-  - docker build -t ycycqwedding .
-  - docker rmi $(docker images -f "dangling=true" -q)
-  - docker run --rm -p 2222:2222 -itd ycycqwedding
+  - sh deploy.sh
