--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -11,5 +11,8 @@ spring:
 wechat:
   appId: wxde61fb45f6d68a5f
   appSecret: 4b70a22117c2463cf55bbfd6739f65e0
+mybatis:
+  configuration:
+    map-underscore-to-camel-case: true
 
 
