--- a/src/miniapp/app.json
+++ b/src/miniapp/app.json
@@ -6,7 +6,7 @@
   "window":{
     "backgroundTextStyle":"light",
     "navigationBarBackgroundColor": "#fff",
-    "navigationBarTitleText": "WeChat",
+    "navigationBarTitleText": "Our Memory",
     "navigationBarTextStyle":"black"
   }
 }
