--- a/src/miniapp/app.json
+++ b/src/miniapp/app.json
@@ -1,12 +1,13 @@
 {
-  "pages":[
+  "pages": [
     "pages/index/index",
-    "pages/logs/logs"
+    "pages/logs/logs",
+    "pages/task1/task1"
   ],
-  "window":{
-    "backgroundTextStyle":"light",
+  "window": {
+    "backgroundTextStyle": "light",
     "navigationBarBackgroundColor": "#fff",
     "navigationBarTitleText": "Our Memory",
-    "navigationBarTextStyle":"black"
+    "navigationBarTextStyle": "black"
   }
 }
