--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -4,7 +4,7 @@ spring:
   datasource:
     username: liji
     password: Syx002183
-    url: 1
+    url: jdbc:mysql://172.31.213.8:3306/ycycqwedding?characterEncoding=utf-8&useSSL=false
     driver-class-name: com.mysql.jdbc.Driver
   jpa:
     show-sql: true
