--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -9,3 +9,10 @@ build-wedding:
   stage: build
   script:
   - sh deploy.sh
+
+build-test:
+  only:
+  - test
+  stage: build
+  script:
+  - sh deploy.sh
