--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -11,7 +11,7 @@ spring:
 wechat:
   appId: wxde61fb45f6d68a5f
   appSecret: 4b70a22117c2463cf55bbfd6739f65e0
-
+logpath: ycycqwedding
 mybatis:
   configuration:
     map-underscore-to-camel-case: true
