--- a/src/miniapp/project.config.json
+++ b/src/miniapp/project.config.json
@@ -34,12 +34,18 @@
 			"list": []
 		},
 		"miniprogram": {
-			"current": 0,
+			"current": 1,
 			"list": [
 				{
 					"id": -1,
 					"name": "auth",
-					"pathName": "pages/auth/auth"
+					"pathName": "pages/auth/auth",
+					"query": ""
+				},
+				{
+					"id": -1,
+					"name": "task4",
+					"pathName": "pages/task4/task4"
 				}
 			]
 		}
