--- a/src/miniapp/project.config.json
+++ b/src/miniapp/project.config.json
@@ -34,7 +34,7 @@
 			"list": []
 		},
 		"miniprogram": {
-			"current": 2,
+			"current": 3,
 			"list": [
 				{
 					"id": -1,
@@ -51,7 +51,13 @@
 				{
 					"id": -1,
 					"name": "task3",
-					"pathName": "pages/task3/task3"
+					"pathName": "pages/task3/task3",
+					"query": ""
+				},
+				{
+					"id": -1,
+					"name": "task2",
+					"pathName": "pages/task2/task2"
 				}
 			]
 		}
